src/test/deca/syntax/valid/test_dir/added/parser/comments_with_decl_inst.deca
{
  // This is a comment
  /* multi
  line
  comment */
  
  int i = 0;

  // This is a comment
  /* multi
  line
  comment */

  print(i);

  // This is a comment
  /* multi
  line
  comment */
}
