src/test/deca/syntax/invalid/parser/oracle/literal_int_without_semicolon.deca
{
  int i = 0;
  2
}
